# QmlHttpRequest

./: .clang-format  CMakeLists.txt  LICENSE  README.md  config.hpp.in
src/: qmlhttprequest.cpp  qmlhttprequest.hpp  qmlhttprequest_global.hpp  request.cpp  request.hpp  response.cpp  response.hpp
tests/: CMakeLists.txt  tst_qmlhttprequest.cpp  tst_request.cpp
